--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
                     href="{{ url_for('inicio') }}"
                     class="{% if active_page == 'inicio'%}activo{% endif %}"
                 >
-                    <h2>Biblioteca Escolar</h2>
+                    <h2>Biblioteca Digital</h2>
                 </a>
                 <nav>
                     <a
