--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,37 +1,48 @@
 {% extends "base.html" %} {% block title %}Inicio{% endblock %} {% block content
 %}
 <section class="dashboard">
-    <h2>Resumen general</h2>
-    <p>
-        Bienvenido al sistema de gestión de biblioteca. Desde aquí podés
-        administrar los libros y los préstamos.
-    </p>
-    <div class="container-resumen">
-        <a href="{{url_for('libros')}}">
-            <div class="card-resumen">
-                <p>
-                    <strong>Libros Totales:</strong>
-                    {{biblioteca.total_libros()}}
-                </p>
-            </div>
-        </a>
+    <div class="dashboard-imagen">
+    <div class="dashboard-texto">
+        <h2>Bienvenido al sistema de <br>
+            gestión de biblioteca</h2>
+        <p>
+            Organizá, consultá y gestioná todos <br>
+            recursos de tu biblioteca en un <br>
+            solo lugar.
+        </p>
+        <div class="container-resumen">
+            <a href="{{url_for('libros')}}">
+                <div class="card-resumen">
+                    <p>
+                        <strong>Libros Totales:</strong>
+                        {{biblioteca.total_libros()}}
+                    </p>
+                </div>
+            </a>
 
-        <a href="{{url_for('libros')}}">
-            <div class="card-resumen">
-                <p>
-                    <strong>Disponibles:</strong>
-                    {{biblioteca.disponibles()}}
-                </p>
-            </div>
-        </a>
-        <a href="{{url_for('usuarios')}}">
-            <div class="card-resumen">
-                <p>
-                    <strong>Usuarios:</strong>
-                    {{biblioteca.total_usuarios()}}
-                </p>
-            </div>
-        </a>
+            <a href="{{url_for('libros')}}">
+                <div class="card-resumen">
+                    <p>
+                        <strong>Disponibles:</strong>
+                        {{biblioteca.disponibles()}}
+                    </p>
+                </div>
+            </a>
+            <a href="{{url_for('usuarios')}}">
+                <div class="card-resumen">
+                    <p>
+                        <strong>Usuarios:</strong>
+                        {{biblioteca.total_usuarios()}}
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+
+        <div class="imagen-biblioteca">
+            <img src="{{ url_for ('static',filename='biblioteca.jpg')}}" 
+            alt="Biblioteca">
+        </div>
     </div>
 </section>
 {% endblock %}
